Correct spacing issue between logo and menu links

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -217,7 +217,7 @@ nav li a {
     display: block;
     padding: .5em;
     font-size: 1.3em;
-    text-align: right;
+    text-align: center;
 }
 
 nav li a:hover {
@@ -231,9 +231,12 @@ nav li a:hover {
 }
 
 @media only screen and (min-width: 768px) {
-    .mobile-menu, .mobile-menu-exit {
-      display: none;
+
+    .mobile-menu,
+    .mobile-menu-exit {
+        display: none;
     }
+
     .navbar .container {
         display: grid;
         grid-template-columns: 180px auto;
@@ -255,8 +258,8 @@ nav li a:hover {
 
     .navbar nav a {
         color: black;
-        font-size: 1em;
-        padding: .1em 1em;
+        font-size: 1.2em;
+        padding: .4em 1em .1em 2em;
     }
 
     ul.primary-nav {
@@ -265,4 +268,3 @@ nav li a:hover {
 
 
 }
-
